[metadata]
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
addopts = -v --cov=tetsuo_ganymede --cov-report=term-missing

[coverage:run]
source = tetsuo_ganymede